--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -40,6 +40,16 @@ jobs:
         bit import learnbit-vue.data-fetching/brewery-app
         bit import learnbit-vue.graphql/servers/my-apollo-server
         bit import learnbit-vue.graphql/user-app
+        # use
+        bit use my-vite-app
+        bit use my-vite-hello-app
+        bit use my-vite-ssr-app
+        bit use apps/global-theme
+        bit use apps/nested-themes
+        bit use brewery-app
+        bit use servers/my-apollo-server
+        bit use user-app
+        # install
         bit install
         # check
         bit list
