--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -40,17 +40,20 @@ jobs:
         bit import learnbit-vue.data-fetching/brewery-app
         bit import learnbit-vue.graphql/servers/my-apollo-server
         bit import learnbit-vue.graphql/user-app
+        # debug start
+        # https://github.com/teambit/bit/pull/10044
         # use
-        # bit use my-vite-app
-        # bit use my-vite-hello-app
-        # bit use my-vite-ssr-app
-        # bit use apps/global-theme
-        # bit use apps/nested-themes
-        # bit use brewery-app
-        # bit use servers/my-apollo-server
-        # bit use user-app
+        bit use my-vite-app
+        bit use my-vite-hello-app
+        bit use my-vite-ssr-app
+        bit use apps/global-theme
+        bit use apps/nested-themes
+        bit use brewery-app
+        bit use servers/my-apollo-server
+        bit use user-app
         # install
-        # bit install
+        bit install
+        # debug end
         # check
         bit list
         cat workspace.jsonc
