--- a/.github/workflows/vue-learnbit-apps-debug.yml
+++ b/.github/workflows/vue-learnbit-apps-debug.yml
@@ -49,7 +49,7 @@ jobs:
         # bit use brewery-app
         # bit use servers/my-apollo-server
         # bit use user-app
-        # bit install
+        bit install
         # debug end
         # check
         bit list
