--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -42,6 +42,14 @@ jobs:
         bit import learnbit-vue.graphql/user-app
         # debug start
         bit install
+        bit use my-vite-app
+        bit use my-vite-hello-app
+        bit use my-vite-ssr-app
+        bit use apps/global-theme
+        bit use apps/nested-themes
+        bit use brewery-app
+        bit use servers/my-apollo-server
+        bit use user-app
         # debug end
         # check
         bit list
