Install and use BVM version 1.13.21

--- a/.github/workflows/vue-learnbit-starters-nightly.yml
+++ b/.github/workflows/vue-learnbit-starters-nightly.yml
@@ -21,6 +21,8 @@ jobs:
           # bvm config
           # bvm versions
           # bvm upgrade
+          bvm install 1.13.21
+          bvm use 1.13.21
           # debug end
           bit --version
       - name: Initialize a workspace (design system)
