Update dependencies in nightly workflow

--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -49,7 +49,7 @@ jobs:
         bit use brewery-app
         bit use servers/my-apollo-server
         bit use user-app
-        bit install
+        bit install @vitest/coverage-v8 @mdx-js/mdx
         # debug end
         # check
         bit list
