--- a/.github/workflows/vue-learnbit-apps-nightly.yml
+++ b/.github/workflows/vue-learnbit-apps-nightly.yml
@@ -49,7 +49,7 @@ jobs:
         bit use brewery-app
         bit use servers/my-apollo-server
         bit use user-app
-        bit install @vitest/coverage-v8 @mdx-js/mdx
+        bit install @vitest/coverage-v8@3.2.4 @mdx-js/mdx@1.6.22
         # debug end
         # check
         bit list
